# pi-day-2026-with-py

./: .gitignore  README.md  TODO.md  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.mjs
.specify/memory/: constitution.md  nfrs.md
.uvextras/: uvextras.yaml
etc/: .gitignore
pi_py/: utils.py
pi_py/algo/: control.py
pi_site/: asgi.py  settings.py  urls.py  wsgi.py
pi_ui/: apps.py  models.py
pi_ui/management/commands/: findp.py  indexp.py  rotatedb.py
pi_ui/migrations/: 0001_initial.py
static/: vite_index.html
static/css/: app.css
